2014-01-17  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_manager.php: fixed the PHP warnings and
	notices.
	
	Fixes: #2414

2014-01-17 Juan Manuel Ramon Vigo <juanmanuel.ramon@artica.es>

	* godmode/events/event_edit_filter.php
	include/functions_events.php
	operation/events/events_list.php:Fixed an ACL issue with event filters.

2014-01-17  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Added ack_utimestamp and id_agent
	to the grouped events query to fix bad results

2014-01-16  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/modificar_agente.php,
	include/functions_agents.php: fixed the PHP warnings and notices.
	
	Fixes: #2412

2014-01-16  Miguel de Dios <miguel.dedios@artica.es>
	
	* general/header.php: fixed the PHP notices about the var
	$search_keywords.

2014-01-16  Ramon Novoa  <rnovoa@artica.es>

	* godmode/alerts/alert_list.list.php,
	  include/functions.php,
	  include/functions_alerts.php: Changes to the alert view to make it more
	  compact.

2014-01-14  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Fixed a warning message on
	PHP configuration advise. For Sourceforge ticket #2409

2014-01-14  Sergio Martin <sergio.martin@artica.es>

	* include/functions_groups.php: Fix group parameter in links
	of groups view on mobile console. Incident #491

2014-01-14  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.list_items.php: fixed the
	list of modules from inventory item.

2014-01-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Added to the header warnings the
	checking of some php.ini values for incident #393

2014-01-13  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_flot.php: fix unecessary space under the
	area graphs when menu is not setted. If is setted, this space is
	for the overview graph. Incident #499

2014-01-10  Miguel de Dios <miguel.dedios@artica.es>
	