@@ -1,3 +1,8 @@
+2014-01-17 Juan Manuel Ramon Vigo <juanmanuel.ramon@artica.es>
+
+	* godmode/reporting/reporting_builder.php: Fixed group filter in report
+	list view.
+
 2014-01-17  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* godmode/agentes/agent_manager.php: fixed the PHP warnings and
